@@ -1,10 +1,15 @@
+2004-09-06  Andras Varga
+
+	* enhanced Copy to clipboard functionality: different variables can
+	be put on different columns
+
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-05-15  ------ omnetpp-3.0a4 released ------
 
-2004-05-05 Andras Varga
+2004-05-05  Andras Varga
 
 	* Started out.
 
